--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-hello world
+<!DOCTYPE html>
+<html>
+	<head>
+		<title></title>
+	</head>
+	<body>
+	<h1>Hello World</h1>
+	</body>
+		<h1></h1>
+	</body>
+</html>
