did everything lol again

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     <div class="ithaca">
       <h1>Ithaca</h1>
-      <p> Ithaca, Odysseus’ homeland.  Ithaca is a grand island with a mountain in its wake.  It is home to the palace of Odysseus, where he will eventually return to.  Additionally, Ithaca is home to Odysseus’ son, Telemachus, and his wife Penelope.  There, one can find many shepherds and herders, along with their flocks of sheep and other domestic animals.  Unfortunately, suitors run rampant in Odysseus’ halls, decreasing the magnificence of his palace, but they will soon be driven out.</p>
+      <p> Ithaca is Odysseus' homeland.  Ithaca is a grand island with a mountain in its wake.  It is home to the palace of Odysseus, where he will eventually return to.  Additionally, Ithaca is home to Odysseus' son, Telemachus, and his wife Penelope.  There, one can find many shepherds and herders, along with their flocks of sheep and other domestic animals.  Unfortunately, suitors run rampant in Odysseus' halls, defacing and destroying of his palace, but they will soon be driven out.</p>
       <h2>Images of Ithaca</h2>
       <img src="http://www.umich.edu/~homeros/Representations%20of%20Homer's%20Ideas/odysseus.jpg">
       <p class="imgcredit">"The Return of Odysseus" by Claude Lorrain</p>
@@ -63,6 +63,7 @@
       <h2>Map</h2>
       <img src="http://www.irasov.com/pics/mapOdys.gif">
       <p class="imgcredit">Credit to www.irasov.com</p>
+      <a href="familytree.html" id="familytreelink">Go to Odysseus' Family Tree</a>
     </div>
   </body>
 </html>
