--- a/familytree.html
+++ b/familytree.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--CSS link-->
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title></title>
+    <title>ODY Family Tree</title>
   </head>
   <body>
     <h1>Odysseus' Family Tree</h1>
