--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--CSS link-->
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title></title>
+    <title>ODY Brohchure</title>
   </head>
   <body>
     <h1 id="ODYadventures">Odyssey Adventures Inc.</h1>
