added code link

--- a/familytree.html
+++ b/familytree.html
@@ -13,5 +13,6 @@
     <h1>Odysseus' Family Tree</h1>
     <img src="odytree.png" alt="Odysseus' Family Tree"></img>
     <h2><a id="backtobrochure" href="index.html">Back to the brochure</a></h2>
+    <h2><a href="code.html">View code</a></h2>
   </body>
 </html>
