--- a/code.html
+++ b/code.html
@@ -1,1 +1,15 @@
-
+<!DOCTYPE html>
+<html>
+  <head>
+    <!--Montserrat-->
+    <link href='https://fonts.googleapis.com/css?family=Montserrat:700' rel='stylesheet' type='text/css'>
+    <!--Open Sans-->
+    <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
+    <!--CSS link-->
+    <link rel="stylesheet" type="text/css" href="index.css">
+    <title>ODY Brohchure</title>
+  </head>
+  <body>
+    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:500px;" href="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.html"></iframe>
+  </body>
+</html>
