--- a/code.html
+++ b/code.html
@@ -7,9 +7,18 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--CSS link-->
     <link rel="stylesheet" type="text/css" href="index.css">
-    <title>ODY Brohchure</title>
+    <title>ODY Code</title>
   </head>
   <body>
-    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:500px;" href="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.html"></iframe>
+    <h1>Brochure</h1>
+    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:500px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.html"></iframe>
+    <hr>
+    <h1>Family Tree</h1>
+    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:500px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/familytree.html"></iframe>
+    <hr>
+    <h1>Page Styling</h1>
+    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:500px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.css"></iframe>
+    <h2><a href="index.html">Back to brochure</a></h2>
+    <h2><a href="familytree.html">Back to family tree</a></h2>
   </body>
 </html>
