--- a/code.html
+++ b/code.html
@@ -16,7 +16,7 @@
     <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:1000px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/familytree.html"></iframe>
     <h1>Page Styling</h1>
     <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:1000px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.css"></iframe>
-    <h2><a href="index.html">Back to brochure</a></h2>
-    <h2><a href="familytree.html">Back to family tree</a></h2>
+    <h2><a style="text-decoration:none;color:white;" href="index.html">Back to brochure</a></h2>
+    <h2><a style="text-decoration:none;color:white;" href="familytree.html">Back to family tree</a></h2>
   </body>
 </html>
