--- a/code.html
+++ b/code.html
@@ -11,12 +11,12 @@
   </head>
   <body>
     <h1>Brochure</h1>
-    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:1000px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.html"></iframe>
+    <iframe src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.html"></iframe>
     <h1>Family Tree</h1>
-    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:1000px;" src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/familytree.html"></iframe>
+    <iframe src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/familytree.html"></iframe>
     <h1>Page Styling</h1>
-    <iframe style="display:block;margin-right:auto;margin-left:auto;height:1000px;width:1000px;" src="index.html"></iframe>
-    <h2><a style="text-decoration:none;color:white;" href="index.html">Back to brochure</a></h2>
-    <h2><a style="text-decoration:none;color:white;" href="familytree.html">Back to family tree</a></h2>
+    <iframe src="index.html"></iframe>
+    <h2><a href="index.html">Back to brochure</a></h2>
+    <h2><a href="familytree.html">Back to family tree</a></h2>
   </body>
 </html>
