--- a/code.html
+++ b/code.html
@@ -15,7 +15,7 @@
     <h1>Family Tree</h1>
     <iframe src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/familytree.html"></iframe>
     <h1>Page Styling</h1>
-    <iframe src="index.html"></iframe>
+    <iframe src="https://raw.githubusercontent.com/andrewrosenkilde/odybrochure/gh-pages/index.css"></iframe>
     <h2><a href="index.html">Back to brochure</a></h2>
     <h2><a href="familytree.html">Back to family tree</a></h2>
   </body>
