--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
       <img src="http://www.irasov.com/pics/mapOdys.gif">
       <p class="imgcredit">Credit to www.irasov.com</p>
       <a href="familytree.html" id="familytreelink">Go to Odysseus' Family Tree</a>
+      <br>
+      <a id="familytreelink" href="code.html">View Code</a>
     </div>
   </body>
 </html>
