--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link href='https://fonts.googleapis.com/css?family=Open+Sans' rel='stylesheet' type='text/css'>
     <!--CSS link-->
     <link rel="stylesheet" type="text/css" href="index.css">
+    <script src="https://code.jquery.com/jquery-1.7.2.min.js"></script>
     <script src="jGravity-min.js"></script>
     <title>ODY Brohchure</title>
   </head>
